# sdc2024_aruco_odometer_py

./: CMakeLists.txt  package.xml
assets/: aruco_odometer.rviz  marker_boxes.json  marker_signs.json  oak_1.json
launch/: aruco_detector_launch.py
src/: sdc2024_aruco_odometer_py_depthai.py  sdc2024_aruco_odometer_py_isaac.py  video_streamer.py
src/templates/: index.html
