<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdc2024_aruco_odometer_py</name>
  <version>0.0.0</version>
  <description>ROS2 package for detecting and navigating after ArUco markers</description>
  <maintainer email="michael@aviate-it.com">user</maintainer>
  <license>TODO: License declaration</license>


  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <!-- <depend>launch_ros</depend> -->
  <depend>depthai_ros_driver</depend>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend> -->
  <!-- <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>flask</exec_depend> -->

  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
